--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.424.0",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
